Score load animation changed and alignment bug fixed

--- a/src/assets/scss/material-kit-pro-react.scss
+++ b/src/assets/scss/material-kit-pro-react.scss
@@ -40,11 +40,18 @@
     top: 0px;
     left: 5px;
     opacity: 1;
+    z-index: 10;
+  }
+  .impactScoreProgressBG{
+    position: absolute;
+    top: 0px;
+    left: 5px;
+    color: #092856 !important;
+    opacity: .2;
   }
   .impactScoreNumber{
     position: absolute;
-    top: 25px;
-    left: 25px;
+    top: 30px;
     white-space:nowrap;
   }
   .lowScore{
